bynkc/tests/fixtures/positive/50_doc_block_on_type/input.bynk
commons docs.demo {
  ---
  An integer length in metres.
  ---
  type Metres = Int where NonNegative
}
