bynkc/tests/fixtures/negative/15_type_in_expression/input.bynk
commons demo {
  type Metres = Int where NonNegative

  fn bad(x: Int) -> Int {
    x + Metres
  }
}
